--- a/mozer/hw6/app/build.gradle
+++ b/mozer/hw6/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -35,10 +36,14 @@ android {
 }
 
 dependencies {
+    def roomVersion = "2.4.2"
+    implementation("androidx.room:room-ktx:$roomVersion")
+    kapt("androidx.room:room-compiler:$roomVersion")
+
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.4.1")
     implementation("androidx.datastore:datastore-preferences:1.0.0")
-    implementation("androidx.navigation:navigation-fragment:2.4.1")
-    implementation("androidx.navigation:navigation-ui:2.4.1")
+    implementation("androidx.navigation:navigation-fragment:2.4.2")
+    implementation("androidx.navigation:navigation-ui:2.4.2")
     implementation 'androidx.activity:activity-ktx:1.4.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
