--- a/mozer/hw7/app/build.gradle
+++ b/mozer/hw7/app/build.gradle
@@ -1,6 +1,8 @@
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -35,8 +37,9 @@ android {
 }
 
 dependencies {
-    implementation("androidx.navigation:navigation-fragment:2.4.1")
-    implementation("androidx.navigation:navigation-ui:2.4.1")
+    def nav_version = "2.4.2"
+    implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
+    implementation("androidx.navigation:navigation-ui:$nav_version")
     implementation("io.coil-kt:coil:1.4.0")
 
     implementation 'androidx.core:core-ktx:1.7.0'
