--- a/mozer/hw7/app/build.gradle
+++ b/mozer/hw7/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -42,7 +43,10 @@ dependencies {
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui:$nav_version")
     implementation("io.coil-kt:coil:1.4.0")
-    
+
+    implementation "com.google.dagger:hilt-android:2.41"
+    kapt "com.google.dagger:hilt-compiler:2.41"
+
     implementation 'androidx.activity:activity-ktx:1.4.0'
 
     implementation("com.squareup.moshi:moshi:1.13.0")
