--- a/mozer/hw7/app/build.gradle
+++ b/mozer/hw7/app/build.gradle
@@ -38,6 +38,10 @@ android {
     }
 }
 
+kapt{
+    correctErrorTypes true
+}
+
 dependencies {
     def nav_version = "2.4.2"
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
@@ -56,6 +60,7 @@ dependencies {
 
     implementation "androidx.paging:paging-runtime:3.1.1"
 
+    implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
 
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.4.1")
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -63,7 +68,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
