--- a/tarasov/lesson11/app/src/main/AndroidManifest.xml
+++ b/tarasov/lesson11/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                <action android:name="com.example.lesson5.NOTIFICATION"/>
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
