--- a/mozer/hw7/app/src/main/AndroidManifest.xml
+++ b/mozer/hw7/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".service.PostCreateService" />
+        <service
+            android:name=".service.PostCreateService"
+            android:exported="false" />
         <service
             android:name=".service.FirebaseNotificationService"
             android:exported="false">
