--- a/tsvetkova/NanoPost/app/build.gradle
+++ b/tsvetkova/NanoPost/app/build.gradle
@@ -50,13 +50,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
-    implementation("androidx.navigation:navigation-fragment:2.4.2")
-    implementation("androidx.navigation:navigation-ui:2.4.2")
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
-
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
- //   implementation("com.squareup.moshi:moshi-kotlin:1.13.0")
 
     implementation("com.squareup.retrofit2:retrofit:2.9.0")
     implementation("com.squareup.retrofit2:converter-moshi:2.9.0")
@@ -85,4 +80,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation("io.coil-kt:coil:1.4.0")
+
+    implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
 }
